--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "socket": "tsx server.ts",
-    "dev:socket": "tsx watch server.ts"
+    "dev:socket": "tsx watch server.ts", 
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "tsx": "^4.20.3",
@@ -117,10 +118,12 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
+    "postcss": "^8"
+  },
+  
     "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     
     "typescript": "^5"
-  }
+  
 }
