--- a/package.json
+++ b/package.json
@@ -103,7 +103,11 @@
     "uuid": "^11.0.2",
     "winston": "^3.11.0",
     "zod": "^3.23.8",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1", 
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.1",
+    
+    "typescript": "^5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -119,11 +123,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8"
-  },
-  
-    "prisma": "^5.21.1",
-    "tailwindcss": "^3.4.1",
-    
-    "typescript": "^5"
+  }
   
 }
