--- a/package.json
+++ b/package.json
@@ -84,10 +84,10 @@
     "next-intl": "^3.0.0-beta.19",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.7",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.2.0", 
+    "react-dom": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-hook-form": "^7.53.1",
     "react-textarea-autosize": "^8.5.4",
     "reactflow": "^11.11.4",
