--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-textarea-autosize": "^8.5.4",
     "reactflow": "^11.11.4",
