--- a/package.json
+++ b/package.json
@@ -8,35 +8,34 @@
     "start": "next start",
     "lint": "next lint",
     "socket": "tsx server.ts",
-    "dev:socket": "tsx watch server.ts", 
+    "dev:socket": "tsx watch server.ts",
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "tsx": "^4.20.3",
     "@auth/prisma-adapter": "^2.7.2",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.9.1",
     "@mantine/hooks": "^7.13.5",
     "@prisma/client": "^5.21.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
     "@react-hook/media-query": "^1.1.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.1",
@@ -84,6 +83,7 @@
     "next-intl": "^3.26.5",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.7",
+    "prisma": "^5.21.1",
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
     "react-day-picker": "^8.10.1",
@@ -96,18 +96,17 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.3",
+    "typescript": "^5",
     "unique-username-generator": "^1.3.0",
     "uploadthing": "^7.2.0",
     "use-debounce": "^10.0.4",
     "uuid": "^11.0.2",
     "winston": "^3.11.0",
     "zod": "^3.23.8",
-    "zustand": "^5.0.1", 
-    "prisma": "^5.21.1",
-    "tailwindcss": "^3.4.1",
-    
-    "typescript": "^5"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -124,5 +123,4 @@
     "@types/react-dom": "^18",
     "postcss": "^8"
   }
-  
 }
