--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -5,19 +5,17 @@
   "main": "server.ts",
   "scripts": {
     "start": "ts-node server.ts",
-    "build": "tsc",
-    "postinstall": "prisma generate --schema ../prisma/schema.prisma"
+    "dev": "ts-node server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "5.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "socket.io": "^4.7.5",
-    "prisma": "5.14.0"
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
