--- a/env.example
+++ b/env.example
@@ -21,7 +21,8 @@ NEXTAUTH_SECRET=1234
 NEXTAUTH_URL=http://localhost:3000
 
 # Socket.io Configuration
-NEXT_PUBLIC_SOCKET_URL=http://localhost:3001
+NEXT_PUBLIC_SOCKET_URL=http://localhost:3002
+SOCKET_PORT=3002
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 UPLOADTHING_TOKEN=''
