--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "@types/socket.io-client": "^3.0.0",
     "@uploadthing/react": "^7.1.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -72,9 +73,11 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "framer-motion": "^12.23.3",
+    "googleapis": "^154.1.0",
     "helmet": "^7.1.0",
     "howler": "^2.2.4",
     "jsonwebtoken": "^9.0.2",
+    "leetcode-query": "^2.0.1",
     "lucide-react": "^0.454.0",
     "multer": "^1.4.5-lts.1",
     "next": "^14.1.1",
@@ -87,10 +90,12 @@
     "react-contenteditable": "^3.3.7",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.1",
     "react-textarea-autosize": "^8.5.4",
     "reactflow": "^11.11.4",
     "redis": "^4.6.10",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
