added points based system for dsa problems, dsa problems unified import and already present list

--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "import-dsa": "tsx scripts/import-dsa-data.ts",
+    "debug-dsa": "tsx scripts/debug-dsa-import.ts",
+    "fresh-import-dsa": "tsx scripts/fresh-import-dsa.ts",
+    "mark-as-imported": "tsx scripts/mark-as-imported.ts",
+    "seed-curated": "tsx scripts/seed-curated-questions.ts",
+    "check-db": "tsx scripts/check-db-state.ts",
+    "remove-duplicates": "tsx scripts/remove-duplicates.ts",
+    "debug-topics": "tsx scripts/debug-topics.ts",
+    "normalize-topics": "tsx scripts/normalize-topics.ts",
+    "test-points": "tsx scripts/test-points-system.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -56,6 +66,8 @@
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^10.0.0",
+    "@types/xlsx": "^0.0.36",
     "@uploadthing/react": "^7.1.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -85,6 +97,7 @@
     "next-intl": "^3.26.5",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.7",
+    "papaparse": "^5.5.3",
     "prisma": "^5.21.1",
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
@@ -105,8 +118,9 @@
     "unique-username-generator": "^1.3.0",
     "uploadthing": "^7.2.0",
     "use-debounce": "^10.0.4",
-    "uuid": "^11.0.2",
+    "uuid": "^11.1.0",
     "winston": "^3.11.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
