--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.19.7",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18",
     "concurrently": "^8.2.2",
     "postcss": "^8"
