--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "set NODE_OPTIONS=--max-old-space-size=4096 && next dev",
+    "dev:win": "set NODE_OPTIONS=--max-old-space-size=4096 && next dev",
+    "build": "set NODE_OPTIONS=--max-old-space-size=4096 && next build",
+    "build:win": "set NODE_OPTIONS=--max-old-space-size=4096 && next build",
+    "build:memory": "set NODE_OPTIONS=--max-old-space-size=8192 && next build",
+    "build:memory:win": "set NODE_OPTIONS=--max-old-space-size=8192 && next build",
     "start": "next start",
-    "lint": "next lint",
+    "build:direct": "next build",
+    "lint": "set NODE_OPTIONS=--max-old-space-size=4096 && next lint",
+    "lint:win": "set NODE_OPTIONS=--max-old-space-size=4096 && next lint",
     "postinstall": "prisma generate",
     "import-dsa": "tsx scripts/import-dsa-data.ts",
     "debug-dsa": "tsx scripts/debug-dsa-import.ts",
@@ -82,6 +88,7 @@
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
     "emoji-mart": "^5.6.0",
+    "engine.io-client": "^6.6.3",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "framer-motion": "^12.23.3",
@@ -138,6 +145,7 @@
     "@types/react": "18.3.23",
     "@types/react-dom": "^18",
     "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "postcss": "^8"
   }
 }
