--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/uuid": "^10.0.0",
     "@types/xlsx": "^0.0.36",
     "@uploadthing/react": "^7.1.0",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
