--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,25 +15,25 @@ services:
     ports:
       - "8010:5432"
 
-  # web:
-  #   image: node:18-alpine
-  #   restart: always
-  #   container_name: taskflow-web
-  #   working_dir: /app
-  #   volumes:
-  #     - ./:/app
-  #     - /app/node_modules
-  #   ports:
-  #     - "80:3000"
-  #   env_file:
-  #     - .env.local                    
-  #   environment:
-  #     NODE_ENV: development
-  #   depends_on:
-  #     - db
-  #   command: >
-  #     sh -c "npm install --legacy-peer-deps  &&
-  #           npm run dev"
+  web:
+    image: node:18-alpine
+    restart: always
+    container_name: taskflow-web
+    working_dir: /app
+    volumes:
+      - ./:/app
+      - /app/node_modules
+    ports:
+      - "80:3000"
+    env_file:
+      - .env.local
+    environment:
+      NODE_ENV: development
+    depends_on:
+      - db
+    command: >
+      sh -c "npm install --legacy-peer-deps &&
+             npm run dev"
 
 volumes:
   database-data:
